--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,17 +6,14 @@
         <div>
             <h1><a href="/">レイのblog</a></h1>
         </div>
-
+        
+        {% for post in posts %}
         <div>
-            <p>published: 06.02.2023, 01:25</p>
-            <h2><a href="">My first post</a></h2>
-            <p>こんにちは！ よろしくお願いします！ </p>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
+        {% endfor %}
 
-        <div>
-            <p>公開日: 2023/02/06, 01:26</p>
-            <h2><a href="">2番目の投稿</a></h2>
-            <p> こんにちは！ よろしくお願いします！ </p>
-        </div>
     </body>
 </html>
